--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href=./styles.css>
 </head>
 <body>
-	<video id="background-video" autoplay="" muted="" poster="Black.jpg" loop="">
-  		<source src="Glitch.webm" type="video/webm">
-	</video>
+	<video id="background-video" autoplay="" muted="" poster="Black.jpg" loop=""><source src="Glitch.webm" type="video/webm"></video>
+  	<video id="boy" autoplay="" muted="" poster="Black.jpg" loop=""><source src="Boy.webm" type="video/webm"></video>	
+	
 </body>
 </html>
